HW Lombok refactoring